--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="Array1"/>
 	<classpathentry kind="src" path="Array2"/>
 	<classpathentry kind="src" path="String"/>
+	<classpathentry kind="src" path="Stack"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
