--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="src" path="String"/>
 	<classpathentry kind="src" path="Stack1"/>
 	<classpathentry kind="src" path="Stack2"/>
+	<classpathentry kind="src" path="queue"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
