LinkedList(Singly,Doubly)

--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="Stack1"/>
 	<classpathentry kind="src" path="Stack2"/>
 	<classpathentry kind="src" path="queue"/>
+	<classpathentry kind="src" path="list"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
